Added and styled Footer

--- a/index.html
+++ b/index.html
@@ -118,10 +118,15 @@
                         4°
                     </div>
                 </div>
-                </br></br></br></br></br></br>
+                </br></br></br></br></br>
                 </a>
                 </p>
-
+<footer>
+    <div class="footsy">
+Open source
+Code by Anet Malejka
+    </div>
+</footer>
                 <script src="src/index.js"></script>
             </div>
 
