--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -91,25 +91,25 @@
 
                 <div class="row days">
                     <div class="col-sm">
-                        Monday <br> <i class="fas fa-sun"></i>4°
+                        Monday <br> <i class="fas fa-sun"></i>°C
                     </div>
 
                     <div class="col-sm">
                         Tuesday <br> <i class="fas fa-cloud-sun-rain"></i>
-                        4°
+                        °C
                     </div>
 
                     <div class="col-sm">
                         Wednesday <br> <i class="fas fa-cloud"></i>
-                        7°
+                        °C
                     </div>
                     <div class="col-sm">
                         Thursday <br> <i class="fas fa-cloud-rain"></i>
-                        4°
+                        °C
                     </div>
                     <div class="col-sm">
                         Friday <br><i class="fas fa-cloud-showers-heavy"></i>
-                        4°
+                        °C
                     </div>
                 </div>
                 </br></br></br></br></br>
