--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                 <div class="row time">
                     <div class="col-sm">
                         Morning <br>
-                        <i class="fas fa-sun"></i>4°
+                        <i class="fas fa-sun"></i>°C
                     </div>
                     <div class="col-sm">
                         Afternoon<br>
 
-                        <i class="fas fa-cloud-sun"></i>8°
+                        <i class="fas fa-cloud-sun"></i>°C
                     </div>
                     <div class="col-sm">
                         Evening<br>
 
-                        <i class="fas fa-cloud-moon"></i>5°
+                        <i class="fas fa-cloud-moon"></i>°C
                     </div>
                 </div>
 
