Updated js, html, css file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
                     <h2 id="city">City</h2>
                     <p1>
+                        <span id="description"> </span></br>
                         Sunrise <span id="sunR"></span>
                     </p1>
                     </br>
